--- a/views/error.pug
+++ b/views/error.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Help Desk Schedule
-    link(rel='stylesheet', href='/stylesheets/style.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div
       h1= message
