--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,10 @@ th {
   text-align: center;
 }
 
+textarea {
+  resize: none;
+}
+
 .bootstrap-timepicker-widget.dropdown-menu {
   background-color: #f5f5f5;
 }
