--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -7,7 +7,7 @@ html
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
     link(rel='stylesheet', href='stylesheets/timepicker.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.min.css')
-    link(rel='stylesheet', href='stylesheets/style.min.css')
+    link(rel='stylesheet', href='stylesheets/style.css')
   body
     div.container-fluid
       div.navbar
