--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -3,11 +3,11 @@ html
   head
     title LTS Help Desk Schedule
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.css')
-    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
+    link(rel='stylesheet', href='stylesheets/fullcalendar.min.css')
+    link(href="stylesheets/bootstrap.min.css", rel="stylesheet")
     link(rel='stylesheet', href='stylesheets/timepicker.min.css')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.min.css')
-    link(rel='stylesheet', href='stylesheets/style.css')
+    link(rel='stylesheet', href='stylesheets/bootstrap-datepicker.min.css')
+    link(rel='stylesheet', href='stylesheets/style.min.css')
   body
     div.container-fluid
       div.navbar
@@ -28,10 +28,10 @@ html
         p.small Issue with the app? &#32;
           a(href='https://github.com/arikalfus/Schedule/issues/new') Submit it here
         a.btn.btn-default.btn-xs(role='button' href='mailto:akalfus@brandeis.edu') Send an email
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js')
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
-    script(src='/javascripts/bootstrap-timepicker.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js')
+    script(src='javascripts/jquery.min.js' type='text/javascript')
+    script(src='javascripts/moment.min.js' type='text/javascript')
+    script(src='javascripts/bootstrap.min.js' type='text/javascript')
+    script(src='/javascripts/bootstrap-timepicker.min.js' type='text/javascript')
+    script(src='javascripts/bootstrap-datepicker.min.js' type='text/javascript')
+    script(src='javascripts/fullcalendar.min.js' type='text/javascript')
     script(src='/javascripts/main.js' type='text/javascript')
