--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -3,11 +3,11 @@ html
   head
     title LTS Help Desk Schedule
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    link(rel='stylesheet', href='stylesheets/fullcalendar.min.css')
-    link(href="stylesheets/bootstrap.min.css", rel="stylesheet")
-    link(rel='stylesheet', href='stylesheets/timepicker.min.css')
-    link(rel='stylesheet', href='stylesheets/bootstrap-datepicker3.min.css')
-    link(rel='stylesheet', href='stylesheets/style.min.css')
+    link(rel='stylesheet', href='/stylesheets/fullcalendar.min.css')
+    link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+    link(rel='stylesheet', href='/stylesheets/timepicker.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker3.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.min.css')
   body
     div.container-fluid
       div.navbar
@@ -28,10 +28,10 @@ html
         p.small Issue with the app? &#32;
           a(href='https://github.com/arikalfus/Schedule/issues/new') Submit it here
         a.btn.btn-default.btn-xs(role='button' href='mailto:akalfus@brandeis.edu') Send an email
-    script(src='javascripts/jquery.min.js' type='text/javascript')
-    script(src='javascripts/moment.min.js' type='text/javascript')
-    script(src='javascripts/bootstrap.min.js' type='text/javascript')
+    script(src='/javascripts/jquery.min.js' type='text/javascript')
+    script(src='/javascripts/moment.min.js' type='text/javascript')
+    script(src='/javascripts/bootstrap.min.js' type='text/javascript')
     script(src='/javascripts/bootstrap-timepicker.min.js' type='text/javascript')
-    script(src='javascripts/bootstrap-datepicker.min.js' type='text/javascript')
-    script(src='javascripts/fullcalendar.min.js' type='text/javascript')
+    script(src='/javascripts/bootstrap-datepicker.min.js' type='text/javascript')
+    script(src='/javascripts/fullcalendar.min.js' type='text/javascript')
     script(src='/javascripts/main.js' type='text/javascript')
