--- a/views/admin_home.pug
+++ b/views/admin_home.pug
@@ -116,12 +116,10 @@ block content
                   div.form-group
                     p Select which days this shift should apply:
                     // Generate checkbox element for each day of the week
-                    each val, index in ['Mon', 'Tues', 'Wed', 'Thur', 'Fri', 'Sat', 'Sun']
+                    each val in ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
                       div.checkbox-inline
-                        input.checkbox-input(type='checkbox',
-                                             name=`days[${index}]`,
-                                             value= val,
-                                             id=`create-shift-${val}`)
+                        input.checkbox-input(type='checkbox', name='days[]', value= val,
+                          id=`create-shift-${val}`)
                         label(for=`create-shift-${val}`)= val
                   div.col-md-4
                     div.form-group
