--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,11 @@ textarea {
   resize: none;
 }
 
+.col-centered{
+  float: none;
+  margin: 0 auto;
+}
+
 .bootstrap-timepicker-widget.dropdown-menu {
   background-color: #f5f5f5;
 }
