--- a/views/admin_home.pug
+++ b/views/admin_home.pug
@@ -178,44 +178,33 @@ block content
                 aria-labelledby='settings-default-times-header')
                   div.panel-body
                     div.row
-                      div.col-md-2
-                        if startTime
-                          p start time: #{startTime}
-                        else
-                          p#variable-not-exist No start time set
-                        if endTime
-                          p end time: #{endTime}
-                        else
-                          p#variable-not-exist No end time set
-                      form#set-default-times-form
+                      form#set-default-times-form(action='/times/default/new', method='post')
                         div.col-md-2
                           div.form-group
                             label.control-label(
                             for='settings-default-time-start') Change the default start time:
-                              div.input-group.bootstrap-timepicker.timepicker
-                                span.input-group-addon.glyphicon.glyphicon-time
-                                input.form-control#settings-default-time-start(
-                                type='text',
-                                placeholder='8 AM',
-                                name='startTime'
-                                )
+                            div.input-group.bootstrap-timepicker.timepicker
+                              span.input-group-addon.glyphicon.glyphicon-time
+                              input.form-control#settings-default-time-start(type='text',
+                              placeholder='8 AM',
+                              name='startTime')
                           div.form-group
                             label.control-label(
                             for='settings-default-time-end') Change the default end time:
-                              div.input-group.bootstrap-timepicker.timepicker
-                                span.input-group-addon.glyphicon.glyphicon-time
-                                input.form-control#settings-default-time-end(
-                                type='text',
-                                placeholder='8 PM',
-                                name='endTime'
-                                )
-                      div.col-md-4
-                        div.form-group
-                          label(for='settings-default-time-range') Apply these changes for how many days into the future? (Exclude today)
+                            div.input-group.bootstrap-timepicker.timepicker
+                              span.input-group-addon.glyphicon.glyphicon-time
+                              input.form-control#settings-default-time-end(type='text',
+                              placeholder='8 PM',
+                              name='endTime')
+                        div.col-md-4
+                          div.form-group
+                            label(for='settings-default-time-range') Apply these changes for how many days into the future? (Exclude today)
                             div.col-md-5
                               input.form-control#settings-default-time-range(type='number',
-                              placeholder='365', name='range')
+                              placeholder='0', name='range')
                             div.col-md-1
                               div.btn-group-vertical
                                 button.btn.btn-default.btn-xs#settings-default-time-semester-btn One semester
                                 button.btn.btn-default.btn-xs#settings-default-time-year-btn One school year
+                        div.col-md-1
+                          button.btn.btn-info.center-block#settings-default-time-submit-btn(type='submit') Submit Changes
