--- a/views/admin_home.pug
+++ b/views/admin_home.pug
@@ -16,195 +16,6 @@ block content
         a(href='#settings', aria-controls='settings', role='tab', data-toggle='tab') Settings
 
     div.tab-content
-      div.tab-pane#staff(role='tabpanel')
-        div.well
-          p This is the staff well
-      div.tab-pane.active#shifts(role='tabpanel')
-        div.well
-          div.container-fluid
-            div.row
-              button.btn.btn-default.btn-info#override-shift(role='button', data-toggle='collapse',
-              data-target='#shift-override', aria-expanded='false',
-              aria-controls='shift-override') Modify Shifts
-              button.btn.btn-info#create-shift(type='button', role='button', data-toggle='collapse',
-              data-target='#shift-creation', aria-expanded='false',
-              aria-controls='shift-creation') Create Shifts
-            br
-            br
-            div.row
-              div.collapse#shift-override
-                h4.
-                  This form is used to modify existing shifts. If you want to create weekly
-                  shifts, please use the 'Create Shifts' form.
-                br
-                div.col-md-2
-                  form#modify-search-form
-                    div.form-group
-                      label.control-label(for='override-date') Select a date:
-                      input.form-control#override-date(type='text',
-                      data-provide='datepicker',
-                      data-date-autoclose='true', placeholder='01/10/2016', name='date')
-                    div.form-group
-                      label.control-label(for='override-shift-owner')
-                        small
-                          p <i>(Optional)</i> Shift Owner:
-                      input.form-control#override-shift-owner(type='text',
-                      placeholder='Louis Brandeis', name='owner')
-                    div.form-group
-                      label.control-label(for='sub-request-begin-time')
-                        small
-                          p <i>(Optional)</i> From:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#sub-request-begin-time(type='text',
-                        placeholder='8:45 am', name='beginTime')
-                    div.form-group
-                      label.control-label(for='sub-request-end-time')
-                        small
-                          p <i>(Optional)</i> To:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#sub-request-end-time(type='text',
-                        placeholder='2 pm', name='endTime')
-                    div.form-group
-                      a.btn.btn-info.center-block#modify-search-form-btn(type='submit') Search for shifts
-                  form#modify-submit-form(action='/shifts/update', method='post', hidden='true')
-                    btn.btn.btn-default#modify-search-again-btn Perform new search
-                    h4 Update the selected shifts:
-                    div.form-group
-                      label.control-label(for='override-shift-replacement')
-                        small
-                          p <i>(Optional)</i> Replace Owner:
-                      input.form-control#override-shift-replacement(type='text',
-                      placeholder='Ollie Owl', name='replacement')
-                    label.control-label(for='sub-request-begin-time')
-                      small
-                        p <i>(Optional)</i> Modify start time:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#sub-update-begin-time(type='text',
-                        placeholder='8:45 am', name='newBeginTime')
-                      br
-                      label.control-label(for='sub-request-end-time')
-                        small
-                          p <i>(Optional)</i> Modify end time:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#sub-update-end-time(type='text',
-                        placeholder='2 pm', name='newEndTime')
-                      br
-                      button.btn.btn-info.center-block#modify-submit-form-btn(type='submit') Submit Changes
-                      br
-                div.col-md-8
-                  div.table-responsive
-                    table.table.table-striped.table-bordered.table-hover.table-condensed#shift-override-table
-                      thead
-                        tr
-                          th Shift Date
-                          th Owner
-                          th Start Time
-                          th End Time
-                      tbody#shift-override-results
-
-            div.collapse#shift-creation
-              h4.
-                This form is used to create weekly shifts. If you want to modify shifts, please
-                use the 'Modify Shifts' form.
-              br
-              div.col-md-6
-                form#create-shift-form(action='/shifts/new', method='post')
-                  div.form-group
-                    p Select which days this shift should apply:
-                    // Generate checkbox element for each day of the week
-                    each val in ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
-                      div.checkbox-inline
-                        input.checkbox-input(type='checkbox', name='days[]', value= val,
-                          id=`create-shift-${val}`)
-                        label(for=`create-shift-${val}`)= val
-                  div.col-md-4
-                    div.form-group
-                      label.control-label(for='create-shift-from-date') Date from:
-                      input.form-control#create-shift-from-date(type='text',
-                      data-provide='datepicker',
-                      data-date-autoclose='true', placeholder='01/10/2016', name='fromDate')
-                    div.form-group
-                      label.control-label(for='create-shift-to-date') Until:
-                      input.form-control#create-shift-to-date(type='text',
-                      data-provide='datepicker',
-                      data-date-autoclose='true', placeholder='01/10/2016', name='toDate')
-                    div.form-group
-                      label.control-label(for='shift-create-owner') Shift owner(s):
-                      textarea.form-control#shift-create-owner(rows='4', placeholder='Louis ' +
-                      'Brandeis, Ollie Owl',
-                      name='owners')
-                    button.btn.btn-info.center-block(type='submit') Submit Changes
-                    br
-                  div.col-md-4
-                    div.form-group
-                      label.control-label(for='shift-create-begin-time') Time from:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#shift-create-begin-time(type='text',
-                        placeholder='8:45 am',
-                        name='beginTime')
-                    div.form-group
-                      label.control-label(for='shift-create-end-time') Until:
-                      div.input-group.bootstrap-timepicker.timepicker
-                        span.input-group-addon.glyphicon.glyphicon-time
-                        input.form-control#shift-create-end-time(type='text',
-                        placeholder='2 pm',
-                        name='endTime')
-                    div.form-group
-                      div.checkbox-inline
-                        input.checkbox-input#create-shift-all-day(type='checkbox', value='y',
-                        name='allday')
-                        label.control-label(for='create-shift-all-day') All day?
-                          br
-                          i
-                            small (Leave above times blank)
-          div#temp-cal
-      div.tab-pane#settings(role='tabpanel')
-        div.well
-          div.container-fluid
-            div.panel-group#settings-accordion(role='tablist',
-            aria-multiselectable='true')
-              div.panel.panel-default
-                div.panel-heading#settings-default-times-header(role='tab')
-                  h4.panel-title
-                    a(role='button', data-toggle='collapse', data-parents='#settings-accordion',
-                    href='#settings-default-times-body', aria-expanded='false',
-                    aria-controls='settings-default-times-body') Default Times
-                div.panel-collapse.collapse#settings-default-times-body(role='tabpanel',
-                aria-labelledby='settings-default-times-header')
-                  div.panel-body
-                    div.row
-                      form#set-default-times-form(action='/times/default/new', method='post')
-                        div.col-md-2
-                          div.form-group
-                            label.control-label(
-                            for='settings-default-time-start') Change the default start time:
-                            div.input-group.bootstrap-timepicker.timepicker
-                              span.input-group-addon.glyphicon.glyphicon-time
-                              input.form-control#settings-default-time-start(type='text',
-                              placeholder='8 AM',
-                              name='startTime')
-                          div.form-group
-                            label.control-label(
-                            for='settings-default-time-end') Change the default end time:
-                            div.input-group.bootstrap-timepicker.timepicker
-                              span.input-group-addon.glyphicon.glyphicon-time
-                              input.form-control#settings-default-time-end(type='text',
-                              placeholder='8 PM',
-                              name='endTime')
-                        div.col-md-4
-                          div.form-group
-                            label(for='settings-default-time-range') Apply these changes for how many days into the future? (Exclude today)
-                            div.col-md-5
-                              input.form-control#settings-default-time-range(type='number',
-                              placeholder='0', name='range')
-                            div.col-md-1
-                              div.btn-group-vertical
-                                button.btn.btn-default.btn-xs#settings-default-time-semester-btn One semester
-                                button.btn.btn-default.btn-xs#settings-default-time-year-btn One school year
-                        div.col-md-1
-                          button.btn.btn-info.center-block#settings-default-time-submit-btn(type='submit') Submit Changes
+      include partials/admin_staff_well
+      include partials/admin_shifts_well
+      include partials/admin_settings_well
